--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "fastify-formbody": "^2.0.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.0.0",
-    "typescript": "^2.6.2"
+    "typescript": "^2.6.2",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@nestjs/testing": "^5.0.0",
