--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@nestjs/common": "^5.0.0",
     "@nestjs/core": "^5.0.0",
     "@nestjs/swagger": "^2.2.0",
+    "@nestjs/typeorm": "^5.1.0",
     "fastify-formbody": "^2.0.0",
+    "pg": "^7.4.3",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.0.0",
+    "typeorm": "^0.2.7",
     "typescript": "^2.6.2",
     "uuid": "^3.3.2"
   },
